# spotlight

./: .env  .envrc  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierrc.yaml  .tool-versions  CONTRIBUTING.md  LICENSE  Makefile  README-PyPI.md  README.md  flake.nix  index.d.ts  mkdocs.yml  openapitools.json  package.json  pnpm-lock.yaml  pyproject.toml  spec.json  tailwind.config.cjs  tsconfig.node.json  tsconfig.types.json  vite.config.ts  vite.config.ts.timestamp-1688388636923.mjs
.github/ISSUE_TEMPLATE/: bug_report.md  customer-reference-issue.md  feature_request.md
.github/workflows/: add-new-issue-to-project.yml  ci.yml  daily-security-report.yml  pr.yml
api-tests/: dataset.test.ts
data/: README.md
data/csv/: australian-weather-small-edited.csv  australian-weather-small.csv  multimodal-random-small.csv
data/feather/: multimodal-random-small.feather
data/fsd50k/: README.md  fsd50k-tiny.csv
data/images/: lena.tif  nature-360p.tif
data/meshes/: bunny.glb  bunny.off  bunny.ply  bunny.stl  tree.ascii.stl  tree.glb  tree.gltf  tree.off  tree.ply  tree.stl
data/mnist/: README.md  mnist-tiny.csv
data/orc/: multimodal-random-small.orc
data/parquet/: multimodal-random-small.parquet
data/tables/: tallymarks-small.h5
data/video/: earth.wmv
data/videos/: sea-360p.avi  sea-360p.mkv  sea-360p.mov  sea-360p.mpg  sea-360p.webm  sea-360p.wmv
docs/: index.md  whitelist.txt
docs/API/: dataset.md  dtypes.md  index.md  layout.md
docs/configure_visualizations/: index.md
docs/contributions/: create_lense.md  index.md
docs/getting_started/: index.md
docs/javascripts/: video-autoplay.js
docs/loading_data/: index.md  loading_hdf5_data.md  loading_huggingface_data.md  loading_pandas_data.md  supported_data_types.md
docs/stylesheets/: extra.css
docs/templates/: text.mako
docs/use_cases/: index.md
frontend/: .env  .gitignore  .prettierignore  .prettierrc.yaml  Makefile  license-checker-template.json  tailwind.config.cjs  tsconfig.json
frontend/public/: index.css
frontend/src/: application.ts  dataformat.ts  datatypes.ts  globals.ts  lib.ts  main.tsx  notify.tsx  palettes.ts  types.ts
frontend/types/: chroma-js.d.ts  globals.d.ts  twin.d.ts  wavesurfer.d.ts
frontend/ui_tests/: conftest.py  generate_ui_test_elements.py  helpers.py  test_load_perfomance.py  test_similarity_map.py
playbook/allstar/: data_slices_sliceguard.ipynb
playbook/rookie/: decision_boundary_detection.ipynb  decision_boundary_layout.json  decision_boundary_layout_colab.json  embedding_layout.json  embedding_layout_colab.json  huggingface_embedding-audio.ipynb  huggingface_embedding.ipynb  huggingface_embedding_audio.ipynb  towhee_embedding.ipynb
playbook/stories/: explore_object_detection.ipynb  fastf1_spotlight_demo.ipynb  fine_tune_img.ipynb  making_of_embeddings_animation.ipynb  making_of_embeddings_animation.ipynb.ipynb  making_of_embeddings_movie.ipynb  navigating_data_issues.ipynb
playbook/veteran/: cleanvision-layout.json  cv_issue_detection.ipynb  cv_issues.json  cv_issues_cleanlab.json  detect_leakage.json  drift_kcore.ipynb  drift_kcore.json  drift_kcore_colab.json  duplicates_annoy.ipynb  duplicates_annoy.json  duplicates_annoy_colab.json  label_errors_cleanlab.ipynb  label_errors_cleanlab.json  label_errors_cleanlab_colab.json  layout-drift-kcore.json  leakage_annoy.ipynb  leakage_annoy.json  leakage_annoy_colab.json  outlier_cleanlab.ipynb  outlier_cleanlab.json  outlier_cleanlab_colab.json
renumics/spotlight/: __init__.py  __version__.py  app.py  app_config.py  appdirs.py  cache.py  cli.py  data_store.py  environ.py  logging.py  plugin_loader.py  reporting.py  requests.py  server.py  settings.py  typing.py  viewer.py  webbrowser.py
scripts/: Test-SpotlightNotebookStart.ps1  Test-SpotlightStart.ps1  build_notebook_theme.py  check_dynamic_versioning.py  create_hf_dataset.py  daily_security_report.py  generate_api_spec.py  generate_demo_test_data.py  generate_demo_test_data_ultra.py  generate_multimodal_test_data.py  generate_performance_test_data.py  generate_test_csv.py
src/: App.tsx  CTADialog.tsx  application.ts  browser.ts  dataformat.ts  datatypes.ts  filters.ts  lib.ts  notify.tsx  palettes.ts  rouge.d.ts  rougeScore.d.ts  types.ts
src/api/: config.ts  errors.ts  index.ts  table.ts
src/client/: runtime.ts
src/components/: AppBar.tsx  DataTypeIcon.tsx  LoadingError.tsx  Logo.tsx  ScalarValue.tsx  ToolBar.tsx  index.ts
src/dataformat/: index.ts
src/hooks/: index.ts  useCell.ts  useColorTransferFunction.ts  useKeyPressed.ts  useMemoCompare.ts  useMemoWithPrevious.ts  usePersistentState.ts  usePrevious.ts  useSize.ts  useWhyDidYouUpdate.ts
src/icons/: Add.tsx  AddCell.tsx  Annotation.tsx  Array.tsx  Autoplay.tsx  Ban.tsx  BoundingBox.tsx  Brain.tsx  Calendar.tsx  Categorical.tsx  ClipboardList.tsx  ColorPalette.tsx  Docs.tsx  EditOff.tsx  File.tsx  Filter.tsx  FilterOff.tsx  Gauge.tsx  Grid.tsx  GroupSelection.tsx  Histogram.tsx  Lightbulb.tsx  Location.tsx  Mesh.tsx  Number.tsx  OpenFolder.tsx  Question.tsx  Repeat.tsx  ResetLayout.tsx  Sequence.tsx  Sequence1D.tsx  TriangleDown.tsx  TriangleRight.tsx  Union.tsx  Up.tsx  Warning.tsx  Window.tsx  WordCloud.tsx  X.tsx  XCircle.tsx  (+1 more)
src/lenses/: ArrayLens.tsx  AudioLens.tsx  BLEULens.tsx  BLEUScoreLens.tsx  HtmlLens.tsx  LensContext.tsx  LensFactory.tsx  MarkdownLens.tsx  None.tsx  RougeScoreLens.tsx  SafeHtmlLens.tsx  ScalarLens.tsx  TextLens.tsx  VideoLens.tsx  index.ts  registry.ts  types.ts  useCellValue.ts  useCellValues.ts  useSetting.ts  useSharedState.ts
src/math/: distances.ts  downsampling.test.ts  downsampling.ts
src/services/: chat.ts  config.ts  data.ts  task.ts
src/stores/: appSettings.ts  colors.ts  components.ts  layout.ts  messages.ts  pluginStore.ts
src/styles/: GlobalStyles.tsx
src/types/: base.ts  dataset.ts  filter.ts  index.ts  layout.ts  lenses.ts  problem.ts
tests/: conftest.py
types/: env.d.ts  globals.d.ts  twin.d.ts
ui_tests/: basic_actions.py  conftest.py  helpers.py  test_basics.py  test_load_perfomance.py  test_startpage.py
(+665 files in other folders)
