[project]
name = "renumics-spotlight"
dynamic = ["version"]
description = "Visualize and maintain datasets to develop and understand data-driven algorithms."
homepage = "https://spotlight.renumics.com/"
documentation = "https://spotlight.renumics.com/"
readme = "README-PyPI.md"
repository = "https://github.com/renumics/spotlight"
keywords = [
  "data curation",
  "machine learning",
  "data science",
  "visualization",
  "pandas",
  "ai",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: JavaScript",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
authors = [
    { name = "Renumics GmbH", email = "info@renumics.com" }
]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "tqdm",
    "loguru",
    "fastapi (>=0.65.2)",
    "orjson",
    "pydantic (>=2.0.0,<3.0.0)",
    "uvicorn (>=0.22)",
    "aiofiles",
    "click",
    "h5py (>3.0)",
    "requests (>=2.31)",
    "umap-learn",
    "typing-extensions",
    "httptools",
    "uvloop (>=0.17.0) ; sys_platform == 'Linux' or sys_platform == 'Darwin'",
    "diskcache",
    "appdirs",
    "databases[sqlite] (>=0.1.3)",
    "rsa",
    "prettytable",
    "networkx",
    "trimesh",
    "imageio (>=2.18.0)",
    "pygltflib (>=1.15.1)",
    "scikit-learn",
    "pandas (>=2.0.0,<3.0.0)",
    "importlib_resources (<5.8.0)",
    "scikit-image",
    "imagecodecs ; platform_machine != 'arm64'",
    "av",
    "validators",
    "ipywidgets",
    "jinja2",
    "toml",
    "websockets",
    "py-machineid",
    "filetype",
    "setuptools",
    "numba",
    "pillow (>=10.0.0)",
    "httpx (>=0.23.0)",
    "datasets (>=2.12.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "transformers",
    "packaging",
    "pyarrow",
]

[project.optional-dependencies]
analyzers = [
  "cleanlab",
  "cleanvision",
]
torch = [
  "torch>=2.0.0",
  "torchcodec",
]
all = [
  "cleanlab",
  "cleanvision",
  "torch>=2.0.0",
  "torchcodec",
]

[project.scripts]
spotlight = "renumics.spotlight.cli:main"

[dependency-groups]
dev = [
    "mypy (>=1.8.0)",
    "types-setuptools (>=57.4.14)",
    "types-requests (>=2.27.20)",
    "pytest (>=7.4.2)",
    "ipython (>=8.10.0)",
    "watchdog (>=2.1.7)",
    "argh (>=0.26.2)",
    "nbmake (>=1.3.0)",
    "selenium (>=4.1.3,<4.10)",
    "diffimg (>=0.3.0)",
    "typer (>=0.4.1)",
    "pre-commit (>=2.19.0)",
    "types-appdirs (>=1.4.3.1)",
    "types-tqdm (>=4.64.7.11)",
    "pdoc3 (>=0.10.0)",
    "types-toml (>=0.10.8.6)",
    "types-pillow (>=10.0.0.1)",
    "pandas-stubs (>=2.0.2.230605)",
    "ruff (>=0.2.1)",
    "check-wheel-contents (>=0.6.0)",
    "notebook",
    "uv-dynamic-versioning>=0.14.0",
    "ray[data]>=2.55.1",
]
playbook = [
    "annoy (>=1.17.2)",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# see https://docs.astral.sh/ruff/rules/ for more
extend-select = ["I", "A", "ASYNC", "B", "FAST", "ANN"]
ignore = ["ANN401", "E501"]

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true
explicit_package_bases = true
mypy_path = "."
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = [
  "pygltflib",
  "validators",
  "h5py",
  "pandas",
  "trimesh",
  "diskcache",
  "umap",
  "sklearn.*",
  "scipy.*",
  "skimage.*",
  "lesscpy",
  "ipywidgets",
  "dotenv",
  "cleanlab.*",
  "machineid",
  "filetype",
  "datasets",
  "diffimg",
  "tests.ui._autogenerated_ui_elements",
  "transformers",
  "pyarrow.*",
  "torch.*",
  "cleanvision",
]
ignore_missing_imports = true

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.uv]
exclude-newer = "3 days"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchcodec = { index = "pytorch-cpu" }

[tool.hatch.build.targets.sdist]
include = [
  "/renumics/spotlight",
  "/renumics/spotlight_plugins",
]

[tool.hatch.build.targets.wheel]
packages = [
  "renumics",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
